# bioworkflow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BIOFLOW_OPTIMIZATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  Dockerfile  EXECUTION_PLAN.md  EXECUTION_SUMMARY.md  FINAL_EXECUTION_SUMMARY.md  GITHUB_ACTIONS_TRIGGER.md  GIT_WORKFLOW_SECURITY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  OPTIMIZED_TASKS.md  OPTIMIZED_TASKS_V2.md  PROJECT_COMPLETION_REPORT.md  PROJECT_REFACTOR_PLAN.md  PROJECT_REFACTOR_SUMMARY.md  QUICKSTART.md  README.md  TASKS.md  TASK_PLAN.md  TRIGGER_ACTIONS_GUIDE.md  commit_workflow_engine.sh  dev-start.bat  dev-start.sh  docker-compose.yml  docker-entrypoint.sh  environment.yml  findings.md  mkdocs.yml  progress.md  pyproject.toml
.github/: SETTINGS.md  dependabot.yml
.github/workflows/: PACKAGING_SUMMARY.md  benchmark.yml  bioworkflow.service  build-packages.yml  ci.yml  deploy.yml  docker-build.yml  docs.yml  release.yml  test-and-release.yml
deploy/docker/: docker-compose.workflow.yml
deploy/kubernetes/: workflow-service-deployment.yaml
docs/: CI-CD.md  DEVELOPMENT.md  FILE_MANIFEST.md  INITIALIZATION.md  RELEASE.md  index.md  packaging.md
docs/guide/: conda.md  configuration.md  installation.md  knowledge.md  mcp.md  quickstart.md  workflows.md
examples/: async_workflow_example.py
packaging/: bioworkflow.spec  runtime_hook.py
packaging/linux/: postinst.sh  prerm.sh
rust/: Cargo.toml
rust/crates/bioworkflow-core/: Cargo.toml
rust/crates/bioworkflow-core/src/: error.rs  lib.rs  python.rs  types.rs  utils.rs
rust/crates/bioworkflow-dag/: Cargo.toml
rust/crates/bioworkflow-dag/src/: builder.rs  executor.rs  lib.rs  parser.rs  scheduler.rs  visualization.rs
rust/crates/bioworkflow-io/: Cargo.toml
rust/crates/bioworkflow-io/src/: async_io.rs  file_ops.rs  lib.rs  stream.rs
rust/crates/bioworkflow-matrix/: Cargo.toml  README.md
rust/crates/bioworkflow-matrix/benches/: matrix_benchmark.rs
rust/crates/bioworkflow-matrix/src/: clustering.rs  correlation.rs  distance.rs  error.rs  lib.rs  python.rs
rust/crates/bioworkflow-python/: Cargo.toml
rust/crates/bioworkflow-python/src/: lib.rs
rust/crates/bioworkflow-scheduler/: Cargo.toml
rust/crates/bioworkflow-scheduler/src/: lib.rs  strategy.rs
scripts/: build_packages.sh  test_package.py  trigger_github_actions.sh
services/miniforge-service/: Dockerfile  README.md  pyproject.toml
services/miniforge-service/src/miniforge_service/: __init__.py  main.py
services/miniforge-service/src/miniforge_service/api/: __init__.py
services/miniforge-service/src/miniforge_service/api/v1/: __init__.py  router.py
services/miniforge-service/src/miniforge_service/api/v1/endpoints/: __init__.py  environments.py  packages.py  system.py
services/miniforge-service/src/miniforge_service/core/: __init__.py  config.py  dependencies.py  manager.py  models.py
services/miniforge-service/tests/: __init__.py  test_api.py  test_main.py
services/workflow-service/: Dockerfile  pyproject.toml  requirements.txt
services/workflow-service/src/workflow_service/: __init__.py  monitoring.py
services/workflow-service/src/workflow_service/api/: __init__.py  executions.py  tasks.py  workflows.py
services/workflow-service/src/workflow_service/core/: __init__.py  app.py  config.py  dependencies.py  service.py
services/workflow-service/src/workflow_service/models/: __init__.py  execution.py  task.py  workflow.py
services/workflow-service/src/workflow_service/types/: __init__.py  execution.py  task.py  workflow.py
src/backend/: __init__.py  main.py
src/backend/api/: __init__.py
src/backend/api/routes/: __init__.py  ai.py  auth.py  conda.py  health.py  jupyter.py  knowledge.py  mcp.py  pipelines.py  system.py  workflows.py
src/backend/auth/: __init__.py  jwt.py
src/backend/common/: constants.py  exceptions.py  utils.py
src/backend/core/: __init__.py  config.py  container.py  database.py  dependencies.py  events.py  interfaces.py  logging.py  performance.py
src/backend/core/plugin/: base.py  exceptions.py  hooks.py  registry.py
src/backend/infrastructure/: __init__.py
src/backend/infrastructure/cache/: __init__.py  redis_cache.py
src/backend/infrastructure/database/: __init__.py  unit_of_work.py
src/backend/infrastructure/events/: __init__.py  event_bus.py
src/backend/infrastructure/metrics/: __init__.py  prometheus.py
src/backend/infrastructure/search/: __init__.py  elasticsearch.py
src/backend/middleware/: __init__.py  performance.py  rate_limit.py  security_headers.py
src/backend/models/: __init__.py  base.py  knowledge.py  pipeline.py  scheduler.py  user.py  worker.py
src/backend/services/: __init__.py  cache.py
src/backend/services/agents/: __init__.py  agent_manager.py  base_agent.py  workflow_agent.py
src/backend/services/ai/: agentscope_eval.py  openai_service.py  pandas3_demo.py
src/backend/services/conda/: __init__.py  async_manager.py  channels.py  manager.py  service.py
src/backend/services/jupyter/: __init__.py  kernel_service.py
src/backend/services/knowledge/: __init__.py
src/backend/services/mcp/: __init__.py
src/backend/services/numpy_utils/: __init__.py  matrix_ops.py  processor.py
src/backend/services/pipeline/: __init__.py  service.py
src/backend/services/skills/: __init__.py  manager.py  market.py  registry.py  runtime.py
src/backend/services/snakemake/: __init__.py  engine.py  workflow_engine.py
src/backend/tasks/: __init__.py
src/backend/utils/: __init__.py
src/frontend/: .env.example  design-system.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/components/skills/: SkillCard.vue
src/frontend/src/: App.vue  main.ts  router.ts  vite-env.d.ts
src/frontend/src/api/: client.ts  index.ts  jupyter.ts
src/frontend/src/pages/: CondaManager.vue  Dashboard.vue  Knowledge.vue  Login.vue  MCPServices.vue  Notebook.vue  (+3 more)
tests/: agentscope_smoke.py  conftest.py  test_health.py  test_performance.py  test_services.py  test_workflow_engine.py
(+12 files in other folders)
