[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioworkflow"
version = "0.1.0"
description = "A modern biological workflow orchestration platform based on Snakemake"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Snakemake Integration
    "snakemake>=9.0.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    
    # Async & Tasks
    "celery>=5.4.0",
    "redis>=5.2.0",
    
    # Data Processing - Latest versions
    "numpy>=2.2.0",
    "pandas>=2.0.0",  # Python 3.10 compatible
    "scipy>=1.15.0",
    "polars>=1.20.0",  # Modern DataFrame alternative
    "pyarrow>=18.0.0",  # Arrow backend for pandas
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    
    # Knowledge Base & Search
    "elasticsearch>=8.17.0",
    "jieba>=0.42.1",
    
    # MCP & AI Integration
    "aiohttp>=3.11.0",
    "httpx>=0.28.0",
    
    # Utils
    "python-dotenv>=1.0.1",
    "click>=8.1.8",
    "rich>=13.9.0",
    "loguru>=0.7.3",
    "PyYAML>=6.0.2",
    "Jinja2>=3.1.5",
    
    # Type hints (Python 3.14 compatible)
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=24.12.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

r = [
    # R Integration (optional)
    "rpy2>=3.5.0",
]

ml = [
    # Machine Learning (optional)
    "scikit-learn>=1.6.0",
    "torch>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bioworkflow"
Documentation = "https://bioworkflow.readthedocs.io"
Repository = "https://github.com/yourusername/bioworkflow.git"
Issues = "https://github.com/yourusername/bioworkflow/issues"

[project.scripts]
bioworkflow = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py313', 'py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I001", "UP", "B", "C4", "SIM", "PERF", "FURB"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
