[package]
name = "bioworkflow-workspace"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["BioWorkflow Team <team@bioworkflow.org"]nlicense = "MIT OR Apache-2.0"
repository = "https://github.com/bioworkflow-platform/bioworkflow"

[workspace]
members = [
    "crates/bioworkflow-core",
    "crates/bioworkflow-dag",
    "crates/bioworkflow-io",
    "crates/bioworkflow-scheduler",
    "crates/bioworkflow-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["BioWorkflow Team <team@bioworkflow.org"]nlicense = "MIT OR Apache-2.0"

[workspace.dependencies]
numpy = "0.20"
pyo3 = "0.20"
pyo3-asyncio = "0.20"