[package]
name = "bioworkflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for BioWorkflow - shared types and utilities"

[features]
default = []
python = ["pyo3", "pyo3-asyncio"]

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 并发工具
dashmap = { workspace = true }
parking_lot = { workspace = true }

# 日志和监控
tracing = { workspace = true }
metrics = { workspace = true }

# Python 绑定 (可选)
pyo3 = { workspace = true, optional = true }
pyo3-asyncio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio-test = "0.4"
num_cpus = "1.0"
