[package]
name = "bioworkflow-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for BioWorkflow"
homepage = "https://bioworkflow.org"

[lib]
name = "bioworkflow"
crate-type = ["cdylib"]

[dependencies]
bioworkflow-core = { path = "../bioworkflow-core", features = ["python"] }
bioworkflow-dag = { path = "../bioworkflow-dag", features = ["python"] }
bioworkflow-scheduler = { path = "../bioworkflow-scheduler", features = ["python"] }
numpy = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio = { workspace = true }