[package]
name = "bioworkflow-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Task scheduler for workflow execution"

[dependencies]
# 核心依赖
bioworkflow-core = { path = "../bioworkflow-core" }
bioworkflow-dag = { path = "../bioworkflow-dag" }

# 并发与并行
tokio = { workspace = true }
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# 数据结构
petgraph = "0.6"
hashbrown = "0.14"
indexmap = "2.2"
priority-queue = "2.7"

# 时间与定时
chrono = { version = "0.4", features = ["serde"] }

# 配置与管理
config = { workspace = true }
dotenvy = { workspace = true }

# 日志与监控
tracing = { workspace = true }
metrics = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Python 绑定
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }

[features]
default = ["python"]
python = ["pyo3", "pyo3-async-runtimes", "bioworkflow-core/python"]
